fix: problemas de esteira e scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Roboto Mono';
   -webkit-font-smoothing: antialiased;
@@ -16,7 +20,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body::before {
